# py_sky-news-feeds

./: .gitignore  main.py  py_sky_rss_feeds.py  pyproject.toml  requirements.txt
classes/: article.py  feed_parser.py  feed_service.py  news_providers.py  sky_article.py
classes/models/: baseNewsCategory.py  entries.py  news_provider.py  parsed_article.py  providers_config.py
classes/news_providers/: bbc_news.py  sky_news.py
classes/services/: article_parsers.py  feed_parsers.py  feed_service.py  news_providers.py  orchestrator.py
classes/utils/: load_config.py  logger.py
config/: news_providers.json
tests/: test_available_categories.py
